[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/environment/StarField.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/Elements/LevelUpButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://arts/collectibles/spaceGem_001.png" type="Texture" id=5]
[ext_resource path="res://arts/Sprites X2/Ships/spaceShips_008.png" type="Texture" id=6]
[ext_resource path="res://fonts/fonts_resources/roboto_regular.tres" type="DynamicFont" id=7]
[ext_resource path="res://res/audio/brute_force_loop.mp3" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.968627, 0.698039, 0.117647, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.968627, 0.435294, 0.117647, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.968627, 0.580392, 0.117647, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.968627, 0.435294, 0.117647, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.968627, 0.435294, 0.117647, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.968627, 0.435294, 0.117647, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )
HBoxContainer/constants/separation = 30
HFlowContainer/constants/hseparation = 0
VBoxContainer/constants/separation = 10

[sub_resource type="DynamicFont" id=3]
size = 72
outline_size = 1
outline_color = Color( 0.968627, 0.486275, 0.117647, 1 )
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="StarField" parent="." instance=ExtResource( 3 )]
position = Vector2( 378, 755 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1480.0
margin_bottom = 640.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 725.0
margin_bottom = 640.0
size_flags_horizontal = 3

[node name="HFlowContainer" type="HFlowContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 725.0
margin_bottom = 48.0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HFlowContainer"]
margin_right = 80.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 48 )
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HFlowContainer"]
margin_left = 80.0
margin_right = 725.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "0"

[node name="HFlowContainer2" type="HFlowContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 725.0
margin_bottom = 106.0
size_flags_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HFlowContainer2"]
margin_right = 80.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 48 )
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="KillsLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HFlowContainer2"]
margin_left = 80.0
margin_right = 725.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "0"

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 725.0
margin_bottom = 357.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Начать"

[node name="WavesLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 367.0
margin_right = 725.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "Волн пройдено: xx/xx Спасибо за игру! Следите за обновлениями!"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 456.0
margin_right = 725.0
margin_bottom = 640.0
size_flags_vertical = 3

[node name="ThanksLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 725.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Особая благодарность:
Елене,
Роману."
align = 2
valign = 2
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 755.0
margin_right = 1480.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ScrollContainer"]
margin_right = 713.0
margin_bottom = 1070.0
size_flags_horizontal = 3
alignment = 1

[node name="LevelUpButton1" parent="MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_right = 713.0
margin_bottom = 206.0

[node name="LevelUpButton2" parent="MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 216.0
margin_right = 713.0
margin_bottom = 422.0
state_name = "defence_level"

[node name="LevelUpButton3" parent="MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 432.0
margin_right = 713.0
margin_bottom = 638.0
state_name = "attack_level"

[node name="LevelUpButton4" parent="MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 648.0
margin_right = 713.0
margin_bottom = 854.0
state_name = "speed_level"

[node name="LevelUpButton5" parent="MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 864.0
margin_right = 713.0
margin_bottom = 1070.0
state_name = "steering_level"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
